# excella

./: .gitignore  CMakeLists.txt  README.md  build.sh  premake5.lua  release_notes.txt
src/: amelie  amelie.cpp  amelie.hpp  comfyg.cpp  comfyg.hpp  core.hpp  database.cpp  database.hpp  entry.cpp  entry.hpp  excella.cpp  excella.hpp  font.cpp  font.hpp  imgui.cpp  imgui.hpp  integer.hpp  main.cpp  miriam.cpp  miriam.hpp  profile.hpp  test.json  texture.cpp  texture.hpp  window.cpp  window.hpp
src/imgui/: imgui_impl_glfw.cpp
src/textures/: diskette_gray.cpp  diskette_red.cpp  edit.cpp  edit_white.cpp  icon.cpp  tag_black.cpp  tag_blue.cpp  trashcan.cpp  url.cpp
